# st_stylish

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.py
examples/: fullpage_component.py  singlepage.py  stylish_iframe.py  with_StyleInjector.py  without_helpers.py
examples/multipage/: home.py
examples/multipage/pages/: page1.py
iframe/frontend/public/: index.html
iframe/frontend/src/: IFrameUtils.ts  Spinner.tsx  StylishIframe.tsx  index.tsx
iframe/frontend/src/css/: component.css  spinner.css
scripts/: makeFirstStylishIframeFullHeight.js
st_stylish/: StyleInjector.py  __init__.py  helpers.py
st_stylish/iframe/: __init__.py
st_stylish/iframe/frontend/: .gitignore  package.json
st_stylish/iframe/frontend/src/: Spinner.tsx  StylishIframe.tsx
st_stylish/iframe/frontend/src/css/: component.css  spinner.css
